compiler/tools/fpp-check/test/component/async_port_return_value.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/component/async_port_return_value.fpp: 5.3
  async input port p: P
  ^
error: async input port may not return a value
port definition is here:
[ local path prefix ]/compiler/tools/fpp-check/test/component/async_port_return_value.fpp: 1.1
port P -> U32
^
